--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+@charset "UTF-8";
 .container {
   max-width: 90%;
   margin-left: 5%;
   margin-right: 5%; }
 
-body {
-  font-size: 16px; }
+*, *::before, *::after {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box; }
 
 header {
   background-image: url(/img/fon.jpg);
@@ -26,7 +30,7 @@ nav {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.5em;
   font-weight: bold; }
 
@@ -40,7 +44,7 @@ nav {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1em; }
 
 .wrapper-intro {
@@ -52,13 +56,13 @@ nav {
 
 .intro-title {
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 3em;
   font-weight: bold; }
 
 .intro-subtitle {
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1.25em;
   padding-top: 30px;
   padding-bottom: 50px; }
@@ -70,7 +74,7 @@ nav {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   height: 50px;
   width: 200px;
   text-transform: uppercase;
@@ -86,7 +90,7 @@ nav {
 
 .all-titles {
   color: #555555;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 1.25em;
@@ -105,7 +109,7 @@ nav {
 
 .all-subtitle {
   color: #555555;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   font-size: 1em;
   text-align: center;
   margin-top: 30px;
@@ -118,7 +122,7 @@ nav {
 .services {
   background-color: #fff;
   color: #555555;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: "Montserrat", sans-serif; }
 
 .service-list {
   display: flex;
@@ -171,8 +175,9 @@ nav {
 .about-text {
   display: flex; }
 
-.about-text-left, .about-text-right {
-  font-family: 'Roboto Slab', serif;
+.about-text-left,
+.about-text-right {
+  font-family: "Roboto Slab", serif;
   font-size: 14px;
   line-height: 1.5rem;
   color: #555555; }
@@ -237,13 +242,13 @@ nav {
   color: #555555;
   font-size: 14;
   font-weight: bold;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: "Montserrat", sans-serif; }
 
 .about-team-item__role {
   text-align: center;
   color: #555555;
   font-size: 13px;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   padding-bottom: 50px; }
 
 .wrapper-latest {
@@ -260,7 +265,7 @@ nav {
 .category-list-item a {
   text-decoration: none;
   color: #555555;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   margin-right: 15px;
   margin-left: 15px; }
 
@@ -269,6 +274,9 @@ nav {
   flex-wrap: wrap;
   justify-content: space-around; }
 
+.example-img {
+  position: relative; }
+
 .example-img img {
   width: 350px;
   height: 320px;
@@ -276,6 +284,41 @@ nav {
   margin-right: auto;
   margin-left: auto;
   margin-bottom: 30px; }
+
+.example-img-hover__menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  height: 320px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: rgba(255, 0, 0, 0.4);
+  opacity: 0; }
+
+.example-img-hover__menu:hover {
+  opacity: 1; }
+
+.example-img-hover__menu-title {
+  font-size: 18px;
+  color: #fff;
+  text-transform: capitalize;
+  margin-bottom: 20px; }
+
+.example-img-hover__menu-subtitle {
+  font-size: 14px;
+  color: #fff;
+  margin-bottom: 25px; }
+
+.example-img-hover__menu-link a {
+  font-size: 18px;
+  color: #c0301c;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 10px;
+  background-color: #f8f8f8; }
 
 .parallax {
   margin-top: 70px;
@@ -289,7 +332,7 @@ nav {
   height: 500px; }
 
 .parallax-title {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   color: #fff;
   font-size: 30px;
   text-align: center;
@@ -299,7 +342,7 @@ nav {
   display: block;
   text-decoration: none;
   color: #fff;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   padding: 20px 35px 20px 35px;
   text-transform: uppercase;
   font-weight: bold;
@@ -336,7 +379,7 @@ nav {
   position: relative; }
 
 .recent-post:first-child::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 360px;
   width: 100%;
@@ -362,7 +405,7 @@ nav {
 
 .recent-post-title a {
   text-decoration: none;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: #555555;
   font-size: 16px;
   text-transform: uppercase;
@@ -375,12 +418,12 @@ nav {
   margin-top: 20px;
   margin-bottom: 40px;
   font-size: 13px;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   color: #555555; }
 
 .recent-post-text {
   font-size: 14px;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   color: #555555;
   line-height: 24px; }
 
@@ -392,7 +435,7 @@ nav {
   text-transform: uppercase;
   font-weight: bold;
   color: #555555;
-  font-family: 'Montserrat', sans-serif; }
+  font-family: "Montserrat", sans-serif; }
 
 .recent-post-button a:hover {
   color: #c0301c; }
@@ -414,13 +457,13 @@ nav {
 .client-content-text p {
   margin-top: 80px;
   margin-bottom: 40px;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-size: 18px;
   color: #555555;
   text-align: center; }
 
 .client-content-by-line {
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-size: 20px;
   color: #555555;
   text-align: center; }
@@ -461,7 +504,7 @@ footer {
 
 .footer-text {
   color: #fff;
-  font-family: 'Roboto Slab', serif;
+  font-family: "Roboto Slab", serif;
   font-size: 14px;
   text-transform: uppercase; }
 
@@ -481,8 +524,11 @@ footer {
   .example-img img {
     width: 250px;
     height: 220px; }
+  .example-img-hover__menu {
+    width: 250px;
+    height: 220px; }
   .recent-post:first-child::after {
-    top: 620px; }
+    top: 550px; }
   .recent-post {
     flex-direction: column;
     align-items: center; }
@@ -540,7 +586,7 @@ footer {
     width: 250px;
     height: 220px; }
   .recent-post:first-child::after {
-    top: 650px; }
+    top: 580px; }
   .recent-post {
     flex-direction: column;
     align-items: center; }
@@ -597,7 +643,8 @@ footer {
     margin-bottom: 40px; }
   .about-text {
     flex-direction: column; }
-  .about-text-left, .about-text-right {
+  .about-text-left,
+  .about-text-right {
     margin-right: 0px;
     text-align: center; }
   .about-team {
@@ -638,3 +685,54 @@ footer {
   .client-content-text p {
     margin-top: 30px;
     margin-bottom: 30px; } }
+
+/* Стили слайдера */
+.slick-list {
+  overflow: hidden; }
+
+.slick-track {
+  display: flex; }
+
+.slick-slide {
+  margin-left: auto; }
+
+.slider {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  position: relative;
+  padding: 0px 60px; }
+
+.slider .slick-arrow {
+  position: absolute;
+  top: 50%;
+  margin: -25px 0px 0px 0px;
+  z-index: 10;
+  font-size: 0px;
+  width: 50px;
+  height: 50px; }
+
+.slider .slick-dots {
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+
+.slider .slick-dots li {
+  list-style: none; }
+
+.slider .slick-dots li button {
+  width: 10px;
+  height: 10px;
+  margin: 5px;
+  background-color: #fff;
+  border-radius: 50%;
+  font-size: 0px;
+  cursor: pointer; }
+
+.slider .slick-dots .slick-active button {
+  background-color: #7a7a7a;
+  border: 1px solid #fff; }
+
+.slider__item {
+  text-align: center;
+  width: 100%; }
