--- a/css/style.css
+++ b/css/style.css
@@ -564,24 +564,11 @@ footer {
 .slick-track {
   display: flex; }
 
-.slick-slide {
-  margin-left: auto; }
-
 .slider {
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
-  position: relative;
-  padding: 0px 60px; }
-
-.slider .slick-arrow {
-  position: absolute;
-  top: 50%;
-  margin: -25px 0px 0px 0px;
-  z-index: 10;
-  font-size: 0px;
-  width: 50px;
-  height: 50px; }
+  position: relative; }
 
 .slider .slick-dots {
   display: flex;
@@ -603,10 +590,6 @@ footer {
 .slider .slick-dots .slick-active button {
   background-color: #7a7a7a;
   border: 1px solid #fff; }
-
-.slider__item {
-  text-align: center;
-  width: 100%; }
 
 @media (max-width: 768px) {
   nav {
@@ -648,7 +631,7 @@ footer {
     margin-top: 20px;
     margin-bottom: 20px; }
   .clients {
-    height: 380px;
+    height: 400px;
     background-color: #dedede; }
   .clients-logo-list {
     padding-top: 20px;
@@ -719,6 +702,8 @@ footer {
   .recent-post-subtitle {
     margin-top: 20px;
     margin-bottom: 20px; }
+  .clients {
+    height: 480px; }
   .clients-logo-list {
     padding: 0;
     padding-top: 20px;
