--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
   border: 0; }
 
 header {
-  background-image: url(/img/fon.jpg);
+  background-image: url("../img/fon.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -327,7 +327,7 @@ nav {
 .parallax {
   margin-top: 70px;
   height: 500px;
-  background-image: url(/img/parallax.jpg);
+  background-image: url("../img/parallax.jpg");
   background-position: center;
   background-repeat: no-repeat; }
 
